# ComfyUI-ImmacStyleMixer

./: .gitignore  LICENSE  PLAN.md  README.md  __init__.py  immac_tools.json  pyproject.toml  style_mixer_data.json.example  what we've learned.md
.github/: ISSUE_TEMPLATE.md
examples/: Style Picker Mixer Nodes Examples.json
src/immac_tools/: __init__.py  _style_utils.py  api.py  forwarding_nodes.py  save_mix_node.py  save_style_node.py  style_blend_node.py  style_create_node.py  style_mix_node.py  style_modify_node.py  style_pick_node.py  style_weight_node.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: comfy.d.ts  main.tsx  types.ts
ui/src/components/: AlertModal.tsx  BarInput.tsx  ConfirmModal.tsx  ConflictResolutionDialog.tsx  ImageLightbox.tsx  MixCard.tsx  StyleCard.tsx  StyleGallery.tsx  StyleMixerPanel.tsx
ui/src/hooks/: useStyleMixerData.ts
