[project]
name = "ComfyUI-ImmacStyleMixer"
version = "0.2.0"
description = "ComfyUI custom node package with a Style Mixer sidebar panel and nodes for managing reusable prompt styles and named mixes."
authors = [
  {name = "Immac", email = "immac.gm@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = []
dependencies = [

]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
Repository = "https://github.com/Immac/ComfyUI-ImmacStyleMixer"
BugTracker = "https://github.com/Immac/ComfyUI-ImmacStyleMixer/issues"


[tool.comfy]
PublisherId = "immac"
DisplayName = "Immac Style Mixer"
Icon = ""
Tags = ["styles", "prompts", "sidebar"]
Repository = "https://github.com/Immac/ComfyUI-ImmacStyleMixer"

includes = ["dist/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py310"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
